# lowm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: lowm_synth_ood_param.yaml  lowm_synth_v0.yaml  train_baselines.yaml  train_lowm.yaml  train_lowm_cophy_omc.yaml  train_lowm_ebtwm_shaped.yaml  train_lowm_g.yaml  train_lowm_occl.yaml  train_lowm_occl_debug.yaml
configs/sweeps/: cophy_omc_ablation.yaml  direct_context_omc_ablation.yaml  ebtwm_shaping_alpha.yaml  ebtwm_shaping_alpha_debug.yaml  lowm_component_ablation.yaml  lowm_negative_type_ablation.yaml  lowm_occl_ablation.yaml  lowm_ood_param_main.yaml
docs/: cophy_preprocessing_acceleration.md  paper1_cswm_baseline_plan.md
lowm/: __init__.py
lowm/data/: __init__.py  benchmark_cophy_adapter.py  cophy_adapter.py  dataset.py  debug_ranking_dataset.py  generate_dataset.py  inspect_cophy.py  merge_cophy_partitions.py  negatives.py  operators.py  preview_cophy_features.py  simulate.py  validate_dataset.py  visualize.py
lowm/eval/: __init__.py  active_operator_inference.py  aggregate_aoi.py  aggregate_cophy_omc.py  aggregate_ebtwm_shaping.py  aggregate_p1_backbone_omc.py  aggregate_paper1_current.py  aggregate_paper1_full.py  (+14 more)
scripts/: train_baselines.sh  train_lowm.sh
tests/: test_active_operator_inference.py  test_baselines_training.py  test_cophy_pipeline.py  test_ebtwm_inference.py  test_ebtwm_shaping.py  test_evaluation_suite.py  test_lowm_g.py  test_lowm_model.py  test_paper1_analyses.py  test_ranking_dataset.py  test_simulator.py  test_sweep_infrastructure.py  test_validation_and_cli.py
(+11 files in other folders)
