[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lowm"
version = "0.1.0"
description = "Latent Operator World Model research codebase"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "torch>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["lowm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
